[package]
name = "abm_git_update_bot"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.deploy]
memory = 256
timeout = 90

[dependencies]
lambda_runtime = "^0.12"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
log = "^0.4"
aws_lambda_events = { version = "0.15.1", features = ["apigw"], default-features = false }
tokio = { version = "1.38.1", features = ["full"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
env_logger = "0.11.3"
github_webhook_message_validator = "0.1.6"
lazy_static = "1.5.0"
hex = "0.4.3"
lambda_http = { version = "0.12.0", features = ["apigw_http"] }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
telegram-bot = "0.8.0"
openssl = { version = "0.10", features = ["vendored"] }
