[package]
name = "abm_git_update_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "^0.8"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
aws_lambda_events = { version = "0.8.3", features = ["apigw"], default-features = false }
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
env_logger = "0.10.0"
grammers-client = "0.4.0"
github_webhook_message_validator = "0.1.6"
lazy_static = "1.4.0"
